# ds-lib

./: CMakeLists.txt  Makefile  README.md
bench/: CMakeLists.txt
bench/include/: benchmark.h  suffix_tree_bench.h
bench/src/: bit_vector_bench.cc  bitmap_array_bench.cc  bitmap_bench.cc  compact_vector_bench.cc  conc_vectors_bench.cc  dictionary_bench.cc  elias_gamma_bench.cc  order_statistic_tree.cc  order_statistic_tree_bench.cc  suffix_tree_bench.cc  text_index_bench.cc
construct/: CMakeLists.txt
construct/src/: construct.cc
include/: bit_vector.h  bitmap.h  bitmap_array.h  compact_ptr.h  compact_vector.h  compressed_suffix_tree.h  conc_vectors.h  counted_btree.h  delta_encoded_array.h  dictionary.h  elias_gamma_encoder.h  elias_gamma_prefix_sum.h  locks.h  order_statistic_tree.h  suffix_array.h  suffix_tree.h  text_index.h  utils.h
include/text/: compressed_suffix_tree.h  ngram_index.h  suffix_array_index.h  suffix_tree.h  suffix_tree_index.h  text_index.h
src/: bitmap.cc  bitmap_array.cc  compressed_suffix_tree.cc  dictionary.cc  suffix_array.cc  suffix_tree.cc
src/text/: compressed_suffix_tree.cc  ngram_index.cc  suffix_array_index.cc  suffix_tree.cc  suffix_tree_index.cc
test/: CMakeLists.txt
test/src/: bit_vector_test.cc  bitmap_array_test.cc  bitmap_test.cc  compact_vector_test.cc  conc_vectors_test.cc  delta_encoded_array_test.cc  elias_gamma_encoder_test.cc  order_statistic_tree_test.cc  test_main.cc
