CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(ds-lib CXX)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3 -g")

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
FILE(MAKE_DIRECTORY ${LIBRARY_OUTPUT_PATH})

SET(INCLUDE include/)
SET(EXTERNAL_INCLUDE external/cst_v_1_1/)
FILE(GLOB SOURCE_FILES src/*.cc)
INCLUDE_DIRECTORIES(${INCLUDE} ${EXTERNAL_INCLUDE})
ADD_LIBRARY(ds STATIC ${SOURCE_FILES})
SET_TARGET_PROPERTIES(ds PROPERTIES LINKER_LANGUAGE CXX)
TARGET_LINK_LIBRARIES(ds cst)

ADD_SUBDIRECTORY(external/cst_v_1_1)
ADD_SUBDIRECTORY(bench)
