CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
PROJECT(ds-lib-bench CXX)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3 -g")

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../bin)
FILE(MAKE_DIRECTORY ${EXECUTABLE_OUTPUT_PATH})

SET(INCLUDE_DIR include/)
SET(SOURCE_FILES src/suffix_tree_bench.cc)
INCLUDE_DIRECTORIES(${INCLUDE_DIR})
ADD_EXECUTABLE(stbench ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(stbench ds)

INSTALL(TARGETS stbench DESTINATION ../bin)
