CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(ds-lib-bench CXX)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3 -g")

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
FILE(MAKE_DIRECTORY ${EXECUTABLE_OUTPUT_PATH})

SET(INCLUDE include/)
FILE(GLOB SOURCE_FILES src/*.cc)
INCLUDE_DIRECTORIES(${INCLUDE})
ADD_EXECUTABLE(stbench ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(stbench ds)
